обновление сдк соц сетей

--- a/app/src/main/res/values/social_secrets.xml
+++ b/app/src/main/res/values/social_secrets.xml
@@ -5,8 +5,8 @@
     <string name="fb_app_secret">a6614a2a2d14e478a7a445f6c5e4b936</string>
 
     <!-- VKontakte -->
-    <string name="vk_app_id">4296536</string>
     <string name="vk_app_private_key">GUwng4kIMX2xxA0PbnXU</string>
+    <integer name="com_vk_sdk_AppId">4296536</integer>
 
     <!-- Twitter -->
     <string name="tw_consumer_key">PnbeNhP3giScGJI6pPCA</string>
