скрытие новостей с главной ленты

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+      xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/hideNews"
+        android:icon="@drawable/news_check"
+        android:title="@string/hide_news"
+        android:visible="false"
+        app:showAsAction="always"/>
     <item
         android:id="@+id/action_invite_friends"
         android:icon="@drawable/mytopic"
         android:title="@string/action_invite_friends"
-        app:showAsAction="always" />
+        app:showAsAction="always"/>
 </menu>
