правка по верстке и тексту

--- a/app/src/main/res/layout/activity_achievement.xml
+++ b/app/src/main/res/layout/activity_achievement.xml
@@ -32,7 +32,7 @@
 
             <TextView
                 android:id="@+id/body"
-                style="@style/text.xlarge"
+                style="@style/text.large"
                 android:layout_width="wrap_content"
                 android:paddingBottom="@dimen/pd_xsmall"
                 android:paddingTop="@dimen/pd_xlarge"/>
