--- a/app/src/main/res/layout/layout_pullable_list.xml
+++ b/app/src/main/res/layout/layout_pullable_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/ptrLayout"
@@ -13,13 +13,12 @@
             android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:drawSelectorOnTop="false" />
+            android:drawSelectorOnTop="false"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/empty"
-        style="@style/AppTheme.BasicEmptyListHint"
-        android:text="@string/empty_list" />
-
+        style="@style/emptylist"
+        android:text="@string/empty_list"/>
 </RelativeLayout>
