--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -17,11 +17,9 @@
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
-    <ImageView
+    <TextView
         android:id="@android:id/empty"
-        style="@style/wrap.centered"
-        android:layout_gravity="center"
-        android:src="@drawable/common_nothing"/>
-
+        style="@style/emptylist"
+        android:text="@string/no_news"/>
 </FrameLayout>
 
