--- a/app/src/main/res/layout/item_innovation_active.xml
+++ b/app/src/main/res/layout/item_innovation_active.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/item.linear"
-    android:padding="@dimen/pd_xsmall">
+<LinearLayout style="@style/item.linear"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:padding="@dimen/pd_xsmall">
 
     <TextView
-        style="@style/text.large.crimson"
-        android:id="@+id/title" />
+        android:id="@+id/title"
+        style="@style/text.large.crimson"/>
 
-    <include layout="@layout/item_innovation_ratingbar" />
-
+    <include layout="@layout/item_innovation_ratingbar"/>
 </LinearLayout>
