--- a/app/src/main/res/layout/item_innovation_passed.xml
+++ b/app/src/main/res/layout/item_innovation_passed.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/item.linear"
-    android:padding="@dimen/pd_xsmall">
+<LinearLayout style="@style/item.linear"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:padding="@dimen/pd_xsmall">
 
     <TextView
-        style="@style/text.large.black"
         android:id="@+id/title"
-        />
+        style="@style/text.large.black"/>
 
     <TextView
-        style="@style/text.crimson"
         android:id="@+id/creditedPoints"
+        style="@style/text.crimson"
         android:text="@string/credited"/>
 
     <TextView
-        style="@style/text.crimson"
         android:id="@+id/voteDateTxt"
+        style="@style/text.crimson"
         android:hint="@string/vote_date_text"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
-    <include layout="@layout/item_innovation_ratingbar" />
-
+    <include layout="@layout/item_innovation_ratingbar"/>
 </LinearLayout>
