--- a/app/src/main/res/values/base_styles.xml
+++ b/app/src/main/res/values/base_styles.xml
@@ -338,6 +338,7 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:paddingBottom">@dimen/pd_xlarge</item>
+        <item name="android:textSize">@dimen/ts_xlarge</item>
     </style>
 
     <style name="auth_error" parent="text">
