надпись о отсутствии новостей и кнопка подписки перемещена в топ

--- a/app/src/main/res/layout/fragment_quests.xml
+++ b/app/src/main/res/layout/fragment_quests.xml
@@ -28,8 +28,7 @@
 
     <LinearLayout
         android:id="@id/empty"
-        style="@style/item.linear"
-        android:layout_centerInParent="true">
+        style="@style/item.linear">
 
         <TextView
             style="@style/text.large.gray"
