фикс заднего фона

--- a/elkag/src/main/res/layout/elk_item_dropdown.xml
+++ b/elkag/src/main/res/layout/elk_item_dropdown.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical|left"
+        android:background="#0eb0a0"
         android:paddingBottom="16dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
