--- a/elkag/src/main/res/layout/item_dynamics_our_app.xml
+++ b/elkag/src/main/res/layout/item_dynamics_our_app.xml
@@ -17,10 +17,11 @@
 
         <TextView
             android:id="@+id/tvTitle"
-            android:textColor="#ff000f"
+            android:textColor="#000000"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
+            android:textSize="20sp"
             android:text="ajklsdf"/>
 
         <TextView
