отспут больше, при аватарке заежает

--- a/app/src/main/res/layout/fragment_quests.xml
+++ b/app/src/main/res/layout/fragment_quests.xml
@@ -29,7 +29,7 @@
     <LinearLayout
         android:id="@id/empty"
         style="@style/item.linear"
-        android:paddingTop="@dimen/pd_xxlarge">
+        android:paddingTop="@dimen/vs_xxxsmall">
 
         <TextView
             style="@style/text.large.gray"
