добравлен прогрессбар при скрытии новостей. скрытие иконки меню скрытия новостей.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="orange">#f67900</color>
     <color name="black">#000000</color>
     <color name="black_light">#141515</color>
-
+    <color name="transparent">#00000000</color>
 
     <color name="authErrorColor">@color/green_pale</color>
     <color name="mainGreenColor">@color/green_light</color>
