--- a/app/src/main/res/values/base_styles.xml
+++ b/app/src/main/res/values/base_styles.xml
@@ -388,7 +388,7 @@
         <item name="android:textSize">@dimen/ts_normal</item>
     </style>
 
-    <style name="quest_container" parent="root">
+    <style name="quest_container" parent="item">
         <item name="android:background">@android:color/transparent</item>
         <item name="android:paddingBottom">@dimen/pd_xxsmall</item>
         <item name="android:paddingLeft">@dimen/pd_xsmall</item>
