--- a/app/src/main/res/layout/layout_back.xml
+++ b/app/src/main/res/layout/layout_back.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout android:id="@+id/back"
-                style="@style/linear"
+                style="@style/item.linear"
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_centerVertical="true"
                 android:background="@android:color/transparent"
