--- a/app/src/main/res/layout/quest_user_avatar.xml
+++ b/app/src/main/res/layout/quest_user_avatar.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout style="@style/wrap"
+<FrameLayout style="@style/root"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:paddingBottom="@dimen/thick_separator">
 
     <RelativeLayout
         android:id="@+id/headerRoot"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent">
 
