вьюхи на батеркнайф

--- a/app/src/main/res/layout/layout_pullable_list.xml
+++ b/app/src/main/res/layout/layout_pullable_list.xml
@@ -20,5 +20,5 @@
     <TextView
         android:id="@+id/empty"
         style="@style/emptylist"
-        android:text="@string/empty_list"/>
+        android:text="@string/innovation_emptylist"/>
 </RelativeLayout>
