--- a/app/src/main/res/layout/fragment_quests.xml
+++ b/app/src/main/res/layout/fragment_quests.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout style="@style/root"
-                xmlns:android="http://schemas.android.com/apk/res/android">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/root">
 
-    <android.support.design.widget.CoordinatorLayout
-        android:id="@+id/coordinatorLayout"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -13,18 +12,22 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            android:layout_alignParentTop="true">
+            android:layout_alignParentTop="true"
+            android:background="@null"
+            android:fitsSystemWindows="true">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/avatarToolbar"
+            <LinearLayout
+                android:id="@+id/lytSearchBar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@android:color/transparent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
                 app:layout_collapseMode="pin"
-                app:layout_scrollFlags="scroll|enterAlways"
-                android:layout_alignParentTop="true"/>
+                app:layout_scrollFlags="scroll|enterAlways">
 
+                <include layout="@layout/quest_user_avatar" />
+            </LinearLayout>
         </android.support.design.widget.AppBarLayout>
 
         <android.support.v4.widget.SwipeRefreshLayout
@@ -38,7 +41,8 @@
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scrollbars="vertical"/>
+                android:scrollbars="vertical"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.design.widget.CoordinatorLayout>
@@ -51,7 +55,7 @@
         <TextView
             style="@style/text.large.gray"
             android:padding="@dimen/pd_xsmall"
-            android:text="@string/empty_quest_list"/>
+            android:text="@string/empty_quest_list" />
         <!--Социальные сети-->
         <LinearLayout
             style="@style/item.linear"
@@ -62,7 +66,7 @@
                 android:id="@+id/subscribe"
                 style="@style/basicIcon"
                 android:drawableLeft="@drawable/rss"
-                android:text="@string/do_subscribe"/>
+                android:text="@string/do_subscribe" />
         </LinearLayout>
     </LinearLayout>
     <!--Заглушка при отсутсвии интернета -->
@@ -81,7 +85,7 @@
                 android:id="@+id/refresh"
                 style="@style/button.centered"
                 android:layout_gravity="center_horizontal"
-                android:text="@string/refresh"/>
+                android:text="@string/refresh" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
