--- a/app/src/main/res/layout/quest_user_avatar.xml
+++ b/app/src/main/res/layout/quest_user_avatar.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout style="@style/root"
+<FrameLayout style="@style/item.linear"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:paddingBottom="@dimen/thick_separator">
 
@@ -7,7 +7,7 @@
         android:id="@+id/headerRoot"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent">
+        android:visibility="gone">
 
         <View
             android:id="@+id/fake_bar1"
