--- a/app/src/main/res/layout/quest_user_avatar.xml
+++ b/app/src/main/res/layout/quest_user_avatar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout style="@style/item.linear"
              xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
              android:paddingBottom="@dimen/thick_separator">
 
     <RelativeLayout
@@ -21,6 +22,8 @@
             android:layout_width="@dimen/vs_xxsmall"
             android:layout_height="@dimen/vs_xxsmall"
             android:layout_centerInParent="true"
-            android:src="@drawable/unlogin"/>
+            android:src="@drawable/unlogin"
+            app:civ_border_color="@color/green_dark"
+            app:civ_border_width="@dimen/thin_separator"/>
     </RelativeLayout>
 </FrameLayout>
