--- a/app/src/main/res/layout/quest_user_avatar.xml
+++ b/app/src/main/res/layout/quest_user_avatar.xml
@@ -15,13 +15,15 @@
             android:layout_width="match_parent"
             android:layout_height="25dp"
             android:layout_alignParentTop="true"
-            android:background="@color/actionbar_background"/>
+            android:background="@drawable/rect_shadow"
+            android:elevation="5dp"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/userAvatar"
             android:layout_width="@dimen/vs_xxsmall"
             android:layout_height="@dimen/vs_xxsmall"
             android:layout_centerInParent="true"
+            android:elevation="6dp"
             android:src="@drawable/unlogin"
             app:civ_border_color="@color/green_dark"
             app:civ_border_width="@dimen/thin_separator"/>
