--- a/app/src/main/res/layout/quest_other.xml
+++ b/app/src/main/res/layout/quest_other.xml
@@ -2,22 +2,25 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/quest_container">
 
-    <include layout="@layout/layout_back" />
+    <android.support.v7.widget.CardView style="@style/cardview">
 
-    <RelativeLayout
-        android:id="@+id/front"
-        style="@style/root"
-        android:background="@drawable/quest_background_orange"
-        android:gravity="center"
-        android:tag="front">
+        <include layout="@layout/layout_back" />
 
-        <TextView
-            android:id="@+id/title"
-            style="@style/quest_title"
-            android:layout_width="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:drawableLeft="@drawable/image_icon_category_other"
-            android:drawablePadding="@dimen/pd_xxsmall" />
-    </RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/front"
+            style="@style/root"
+            android:background="@drawable/quest_background_orange"
+            android:gravity="center"
+            android:tag="front">
+
+            <TextView
+                android:id="@+id/title"
+                style="@style/quest_title"
+                android:layout_width="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:drawableLeft="@drawable/image_icon_category_other"
+                android:drawablePadding="@dimen/pd_xxsmall" />
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
