--- a/app/src/main/res/layout/quest_social.xml
+++ b/app/src/main/res/layout/quest_social.xml
@@ -1,48 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout style="@style/quest_container"
-             xmlns:android="http://schemas.android.com/apk/res/android">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/quest_container">
 
-    <include layout="@layout/layout_back"/>
+    <android.support.v7.widget.CardView style="@style/cardview">
 
-    <RelativeLayout
-        android:id="@+id/front"
-        style="@style/root"
-        android:background="@drawable/quest_background_blue"
-        android:orientation="horizontal"
-        android:tag="front">
+        <include layout="@layout/layout_back" />
 
-        <ImageView
-            android:id="@+id/icon"
-            style="@style/wrap.centered"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical"
-            android:padding="@dimen/pd_xxsmall"/>
+        <RelativeLayout
+            android:id="@+id/front"
+            style="@style/root"
+            android:background="@drawable/quest_background_blue"
+            android:orientation="horizontal"
+            android:tag="front">
 
-        <include
-            android:id="@+id/contprice"
-            layout="@layout/quest_price"
-            style="@style/wrap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"/>
+            <ImageView
+                android:id="@+id/icon"
+                style="@style/wrap.centered"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:padding="@dimen/pd_xxsmall" />
 
-        <LinearLayout
-            style="@style/wrap.linear"
-            android:layout_gravity="center_vertical"
-            android:layout_toLeftOf="@id/contprice"
-            android:layout_toRightOf="@id/icon"
-            android:layout_weight="0.4">
+            <include
+                android:id="@+id/contprice"
+                style="@style/wrap"
+                layout="@layout/quest_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true" />
 
-            <TextView
-                android:id="@+id/title"
-                style="@style/quest_title"
-                android:text="@string/title_tell_to_friends"/>
+            <LinearLayout
+                style="@style/wrap.linear"
+                android:layout_gravity="center_vertical"
+                android:layout_toLeftOf="@id/contprice"
+                android:layout_toRightOf="@id/icon"
+                android:layout_weight="0.4">
 
-            <TextView
-                android:id="@+id/details"
-                style="@style/quest_detail"/>
-        </LinearLayout>
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/title"
+                    style="@style/quest_title"
+                    android:text="@string/title_tell_to_friends" />
+
+                <TextView
+                    android:id="@+id/details"
+                    style="@style/quest_detail" />
+            </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 </FrameLayout>
