--- a/app/src/main/res/values/base_styles.xml
+++ b/app/src/main/res/values/base_styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!--Стили для контейнеров-->
     <style name="root">
@@ -401,5 +402,13 @@
         <item name="android:paddingTop">@dimen/pd_xsmall</item>
         <item name="android:drawablePadding">@dimen/pd_xxsmall</item>
         <item name="android:gravity">center_vertical</item>
+    </style>
+    
+    <style name="cardview" parent="root">
+        <item name="android:layout_margin">2dp</item>
+        <item name="cardCornerRadius">@dimen/quest_background_round</item>
+        <item name="cardElevation">3dp</item>
+        <item name="cardBackgroundColor">@android:color/white</item>
+        <item name="cardPreventCornerOverlap">false</item>
     </style>
 </resources>
