--- a/app/src/main/res/layout/activity_newflat.xml
+++ b/app/src/main/res/layout/activity_newflat.xml
@@ -42,9 +42,11 @@
                 <android.widget.AutoCompleteTextView
                     android:id="@+id/etStreet"
                     style="@style/flat.auto"
-                    android:layout_marginBottom="@dimen/pd_xsmall"
                     android:completionThreshold="3"
-                    android:hint="@string/elk_street"/>
+                    android:hint="@string/elk_street"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
             </RelativeLayout>
 
             <LinearLayout
