--- a/elkag/src/main/res/layout/item_dynamics_our_app.xml
+++ b/elkag/src/main/res/layout/item_dynamics_our_app.xml
@@ -1,28 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <com.android.volley2.toolbox.NetworkImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="3dp"
         android:src="@drawable/elk_default_image" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/image"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tvTitle"
-            android:textColor="#000000"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
-            android:textSize="20sp"
-            android:text="ajklsdf"/>
+            android:text="ajklsdf"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/tvBody"
@@ -32,7 +33,7 @@
             android:paddingBottom="5dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:text="sdfsdff"/>
+            android:text="sdfsdff" />
     </LinearLayout>
 
 </RelativeLayout>
