--- a/app/src/main/res/layout/layout_offerta.xml
+++ b/app/src/main/res/layout/layout_offerta.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout style="@style/item.linear"
                 xmlns:android="http://schemas.android.com/apk/res/android"
-                android:padding="@dimen/pd_xsmall">
+                android:paddingTop="@dimen/pd_xsmall"
+                android:paddingBottom="@dimen/pd_xsmall">
 
     <CheckBox
         android:id="@+id/cbAgreeOffer"
